# rick-llm

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
notebooks/: dataset_creation.ipynb  finetune.ipynb
ollama_files/: Modelfile
src/: dataset.py  download_model.py
src/finetune/: finetune.py  model_utils.py  trainer.py
src/lambda/: commands.py  request.json  requirements_lambda.txt
src/rick_llm/: constants.py  exceptions.py  finetune.py  model_utils.py  trainer.py
